--- a/back/package.json
+++ b/back/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "node-start": "node ./src/server.js",
+    "nodemon-start": "nodemon ./src/server.js",
+    "migrate": "knex migrate:latest",
+    "seed": "knex seed:run",
+    "makeMigration": "knex migrate:make",
+    "makeSeed": "knex seed:make"
   },
   "keywords": [],
   "author": "",
